--- a/src/app/plato/plato.component.html
+++ b/src/app/plato/plato.component.html
@@ -21,11 +21,9 @@
                         Plato
                     </h1>
                     <p>
-                        Wheel for change was an investment platform for Social Entrepreneurs where Potential investors
-                        could
-                        find and invest in projects. The Client required a digital platform in which Social
-                        entrepreneurs
-                        could create their profiles for their projects and could be found by investors.
+                        Plato is an web app that helps users find learning content and resources relevant to a specific
+                        profession. It curates, recommends and provides links to already existing content such as
+                        videos, articles, books etc. based on user preferences.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -61,7 +59,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <h3>Challenges</h3>
+                    <h3>The Problem</h3>
                     <p>
                         User had to input in a lot of information through a form and forms can be long and boring. This
                         could affect the
@@ -88,14 +86,14 @@
                         that determine set of
                         features to solve thier
                         problems</p>
-                    <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
+                    <img src="../../assets/images/plato-persona-1.png" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/persona2.PNG" style="height: auto; width: 100%;">
+                    <img src="../../assets/images/plato-persona-2.png" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -120,24 +118,6 @@
     </section>
 
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <h4>Competitive Analysis</h4>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <h4>Online Research</h4>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-        </div>
-    </section>
 
 
     <section class="section">
@@ -145,37 +125,14 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <h3>User Flows</h3>
-                    <img src="../../assets/images/userflow1.PNG" style="height: auto; width: 100%;">
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/userflow2.PNG" style="height: auto; width: 100%;">
+                    <h3>User Journey Mapping</h3>
+                    <img src="../../assets/images/User Journey Mapping.jpg" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
         </div>
     </section>
 
-    <section class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <h4>Tasks</h4>
-                    <p>
-                        With the help of user flows we identified various tasks a social entrprenuer would perform and
-                        also differentiated which part of the journey will be free and which one should be paid. 
-                    </p>
-                    <img src="../../assets/images/tasks.jpg" class="img-fluid">
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-        </div>
-    </section>
 
     <section class="section">
         <div class="container">
@@ -195,6 +152,22 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <h3>Prototype</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <img src="../../assets/images/plato1.png" class="img-fluid">
+                    <img src="../../assets/images/plato2.png" class="img-fluid">
+                    <img src="../../assets/images/plato3.png" class="img-fluid">
+                    <img src="../../assets/images/plato4.png" class="img-fluid">
+                    <img src="../../assets/images/plato5.png" class="img-fluid">
+                    <img src="../../assets/images/plato6.png" class="img-fluid">
+                    <img src="../../assets/images/plato7.png" class="img-fluid">
+                    <img src="../../assets/images/plato8.png" class="img-fluid">
+                    <img src="../../assets/images/plato9.png" class="img-fluid">
+                    <img src="../../assets/images/plato10.png" class="img-fluid">
                 </div>
                 <div class="col-md-2"></div>
             </div>
