--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                     A Product designer based in Toronto
                 </h2>
                 <p style="font-size: 20px;color: #505F79;">
-                    I believe in solving human problems by understanding their habits and patterns and integrating them
+                    I believe in solving user problems by understanding their habits and patterns and integrating them
                     into my designs to create a seamless and effortless experience.
                 </p>
                 <p style="color: #253858;">
