--- a/src/app/plato/plato.component.html
+++ b/src/app/plato/plato.component.html
@@ -22,8 +22,8 @@
                     </h1>
                     <p>
                         Plato is an web app that helps users find learning content and resources relevant to a specific
-                        profession. It curates, recommends and provides links to already existing content such as
-                        videos, articles, books etc. based on user preferences.
+                        profession. It curates, recommends and provides links to already existing youtube videos based
+                        on user preferences.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -36,16 +36,17 @@
             <div class="row pt-3 pb-3">
                 <div class="col-md-3"></div>
                 <div class="col-md-2">
-                    <h5>Client</h5>
-                    <p>Ashraful Hasan</p>
-                </div>
-                <div class="col-md-2">
                     <h5>My Role</h5>
                     <p>Product Designer</p>
                 </div>
+
                 <div class="col-md-2">
                     <h5>Duration</h5>
                     <p>3 months</p>
+                </div>
+                <div class="col-md-2">
+                    <h5>Responsibilities</h5>
+                    <p>User Research<br>Visual Design<br>Product Design</p>
                 </div>
                 <div class="col-md-3"></div>
             </div>
@@ -61,12 +62,31 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>The Problem</h3>
                     <p>
-                        User had to input in a lot of information through a form and forms can be long and boring. This
-                        could affect the
-                        experience of the user and drive him away from the platform. The challenge here is to design a
-                        form
-                        which could
-                        takes hours to fill(not at the same time).
+                        Everyday thousands videos are uploaded on youtube out of which some are related to eLearning.
+                        Youtube might not be an eLearning platform but many people come to yotube to learn skills like
+                        programming, design etc. As a matter of fact in 2018 86% people said that they use youtube to
+                        learn something in a survey.
+                    </p>
+                    <p>
+                        However, Youtube is a video sharing platform not a elearning platform and lacks some features of
+                        it.
+                        Also since the non elearning content on the platform is way more in quantity then elearning
+                        content it is more likely to be in suggested videos which has become a major source of
+                        youtube views. This leads to challenges especially in the initial stages of youtube career
+                        where you need a certain amount of views to get monitized.
+                    </p>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h3>The Solution</h3>
+                    <p>
+                        A platforms which which is primararily for learning content where youtube creators can embed
+                        thier vidoes on the platform and engage and have more chances of engaging with thier target
+                        audience to achieve more views.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -80,8 +100,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <h3 style="color: #5E6C84;">Research</h3>
-                    <h4>Persona</h4>
+                    <h3>Persona</h3>
                     <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on
                         that determine set of
                         features to solve thier
@@ -100,16 +119,16 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <p><b>Key Outcomes</b></p>
+                    <!-- <p><b>Key Outcomes</b></p> -->
                     <ul>
-                        <li>I want to manage my team and distribute tasks</li>
+                        <!-- <li>I want to manage my team and distribute tasks</li>
                         <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
                         <li>I want to trust those who are investing in my business</li>
                         <li>I want to connect with investors with the same
                             social values as myself</li>
                         <li>I want to spend less time doing paperwork</li>
                         <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
-                        <li>I get frustrated when I have to do repetitive work for different project applications</li>
+                        <li>I get frustrated when I have to do repetitive work for different project applications</li> -->
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -138,8 +157,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <h3>Wireframes</h3>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h3>Prototype</h3>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-3">
+                    <h5>Landing Page</h5>
+                    <img src="../../assets/images/plato1.png" class="img-fluid image-wrapper">
+                    <h5>Career Preference Page</h5>
+                    <img src="../../assets/images/plato2.png" class="img-fluid image-wrapper">
+                    <h5>Topic Preference Page</h5>
+                    <img src="../../assets/images/plato3.png" class="img-fluid image-wrapper">
+                    <h5>Home Page</h5>
+                    <img src="../../assets/images/plato4.png" class="img-fluid image-wrapper">
+                    <h5>Content Page</h5>
+                    <img src="../../assets/images/plato5.png" class="img-fluid image-wrapper">
+                    <h5>Content Creation Page</h5>
+                    <img src="../../assets/images/plato6.png" class="img-fluid image-wrapper">
+                    <h5>Content Creators Information Page</h5>
+                    <img src="../../assets/images/plato7.png" class="img-fluid image-wrapper">
+                    <h5>Verification Message Page</h5>
+                    <img src="../../assets/images/plato8.png" class="img-fluid image-wrapper">
+                    <h5>Dashboard Page</h5>
+                    <img src="../../assets/images/plato9.png" class="img-fluid image-wrapper">
+                    <h5>Content Upload Page</h5>
+                    <img src="../../assets/images/plato10.png" class="img-fluid image-wrapper">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -150,24 +195,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <h3>Prototype</h3>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/plato1.png" class="img-fluid">
-                    <img src="../../assets/images/plato2.png" class="img-fluid">
-                    <img src="../../assets/images/plato3.png" class="img-fluid">
-                    <img src="../../assets/images/plato4.png" class="img-fluid">
-                    <img src="../../assets/images/plato5.png" class="img-fluid">
-                    <img src="../../assets/images/plato6.png" class="img-fluid">
-                    <img src="../../assets/images/plato7.png" class="img-fluid">
-                    <img src="../../assets/images/plato8.png" class="img-fluid">
-                    <img src="../../assets/images/plato9.png" class="img-fluid">
-                    <img src="../../assets/images/plato10.png" class="img-fluid">
+                <div class="col-md-8 narrow-container px-5 py-5 text-center">
+                    <h4>Experience the full prototype by clicking below</h4>
+                    <br>
+                    <a target="_blank"
+                        href="https://xd.adobe.com/view/2ba63984-dabe-4d6d-b709-0e9362fbff66-7ef5/?fullscreen">
+                        <button type="button" class="btn btn-primary">View Prototype</button>
+                    </a>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -180,6 +214,11 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <h3>Conclusion</h3>
+                    <p>
+                        Overall I believe plato would be able to solve the earlier defined user problems and make their
+                        lives easier. However there are few things which still needs to be addresed. One of it is to
+                        focus more on the content and give more information about it liek the learning outcome etc.
+                    </p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
