--- a/src/app/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/wheel-for-change/wheel-for-change.component.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section class="my-5">
+    <!-- <section class="my-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section>
         <div class="container">
@@ -143,14 +143,11 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <p><b>Key Outcomes</b></p>
                     <ul>
-                        <li>I want to manage my team and distribute tasks</li>
-                        <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
-                        <li>I want to trust those who are investing in my business</li>
-                        <li>I want to connect with investors with the same
+                        <li>Manage my team and distribute tasks</li>
+                        <li>Meet other entrepreneurs who believe in the same cause as I do</li>
+                        <li>Connect with investors with the same
                             social values as myself</li>
-                        <li>I want to spend less time doing paperwork</li>
-                        <li>I want to meet other entrepreneurs who believe in the same cause as I do</li>
-                        <li>I get frustrated when I have to do repetitive work for different project applications</li>
+                        <li>Spend less time doing paperwork</li>
                     </ul>
                 </div>
                 <div class="col-md-2"></div>
@@ -188,7 +185,7 @@
                     <h4>Tasks</h4>
                     <p>
                         With the help of user flows we identified various tasks a social entrprenuer would perform and
-                        also differentiated which part of the journey will be free and which one should be paid. 
+                        also differentiated which part of the journey will be free and which one should be paid.
                     </p>
                     <img src="../../assets/images/tasks.jpg" class="img-fluid">
                 </div>
@@ -210,19 +207,43 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/Project Splash page.png" class="img-fluid">
-                    <img src="../../assets/images/Create a project details.png" class="img-fluid">
-                    <img src="../../assets/images/Assign a team.png" class="img-fluid">
-                    <img src="../../assets/images/Projects list.png" class="img-fluid">
-                    <img src="../../assets/images/landing.png" class="img-fluid">
-                    <img src="../../assets/images/Application Q1.png" class="img-fluid">
+                    <h5>Landing Page</h5>
+                    <img src="../../assets/images/Project Splash page.png" class="img-fluid image-wrapper">
+                    <h5>Project Details Page</h5>
+                    <img src="../../assets/images/Create a project details.png" class="img-fluid image-wrapper">
+                    <h5>Adding Team member Page</h5>
+                    <img src="../../assets/images/Assign a team.png" class="img-fluid image-wrapper">
+                    <h5>Project List Page</h5>
+                    <img src="../../assets/images/Projects list.png" class="img-fluid image-wrapper">
+                    <h5>Journey Page</h5>
+                    <img src="../../assets/images/landing.png" class="img-fluid image-wrapper">
+                    <h5>Application Page</h5>
+                    <img src="../../assets/images/Application Q1.png" class="img-fluid image-wrapper">
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 narrow-container px-5 py-5 text-center">
+                    <h4>Experience the full prototype by clicking below</h4>
+                    <br>
+                    <a target="_blank"
+                        href="https://xd.adobe.com/view/593d9ed4-6e94-45a3-754f-838602755b1d-2f0c/?fullscreen">
+                        <button type="button" class="btn btn-primary">View Prototype</button>
+                    </a>
                 </div>
                 <div class="col-md-2"></div>
             </div>
         </div>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
@@ -232,7 +253,7 @@
                 <div class="col-md-2"></div>
             </div>
         </div>
-    </section>
+    </section> -->
 </div>
 <footer>
     <app-footer></app-footer>
