--- a/src/styles.sass
+++ b/src/styles.sass
@@ -69,3 +69,7 @@ h4,h5,h6
 .home-icon-wrapper
     font-size: 25px
     padding: 5px
+
+.image-wrapper
+    box-shadow: 0px 0px 7px 0px #dadada
+    margin-bottom: 20px
