--- a/src/app/plato/plato.component.html
+++ b/src/app/plato/plato.component.html
@@ -62,18 +62,17 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>The Problem</h3>
                     <p>
-                        Everyday thousands videos are uploaded on youtube out of which some are related to eLearning.
-                        Youtube might not be an eLearning platform but many people come to yotube to learn skills like
-                        programming, design etc. As a matter of fact in 2018 86% people said that they use youtube to
-                        learn something in a survey.
+                        Every day thousands of videos are uploaded on youtube, out of which some are related to
+                        eLearning. Youtube might not be an eLearning platform but many people come to youtube to learn
+                        skills like programming, design, etc. As a matter of fact, in 2018 86% of people said that they
+                        use youtube to learn something in a survey.
                     </p>
                     <p>
-                        However, Youtube is a video sharing platform not a elearning platform and lacks some features of
-                        it.
-                        Also since the non elearning content on the platform is way more in quantity then elearning
-                        content it is more likely to be in suggested videos which has become a major source of
-                        youtube views. This leads to challenges especially in the initial stages of youtube career
-                        where you need a certain amount of views to get monitized.
+                        However, Youtube is a video sharing platform, not a learning platform, and lacks some features
+                        of it. Also since the non eLearning content on the platform is way more in quantity than
+                        eLearning content it is more likely to be in suggested videos which have become a major source
+                        of youtube views. This leads to challenges especially in the initial stages of a youtube career
+                        where you need a certain amount of views to get monetized.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -84,9 +83,9 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>The Solution</h3>
                     <p>
-                        A platforms which which is primararily for learning content where youtube creators can embed
-                        thier vidoes on the platform and engage and have more chances of engaging with thier target
-                        audience to achieve more views.
+                        A platform that is primarily for learning content where youtube creators can embed their videos
+                        on the platform and engage and have more chances of engaging with their target audience to
+                        achieve more views.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -100,11 +99,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <h3>Persona</h3>
-                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on
-                        that determine set of
-                        features to solve thier
-                        problems</p>
+                    <h3>User Research</h3>
                     <img src="../../assets/images/plato-persona-1.png" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
@@ -215,9 +210,9 @@
                 <div class="col-md-8">
                     <h3>Conclusion</h3>
                     <p>
-                        Overall I believe plato would be able to solve the earlier defined user problems and make their
-                        lives easier. However there are few things which still needs to be addresed. One of it is to
-                        focus more on the content and give more information about it liek the learning outcome etc.
+                        Overall I believe Plato would be able to solve the earlier defined user problems and make their
+                        lives easier. However, a few things still need to be addressed, one of them is to focus more on
+                        the content and give more information about it like the learning outcome, etc.
                     </p>
                 </div>
                 <div class="col-md-2"></div>
