--- a/src/app/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/wheel-for-change/wheel-for-change.component.html
@@ -102,12 +102,11 @@
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>Challenges</h3>
                     <p>
-                        User had to input in a lot of information through a form and forms can be long and boring. This
-                        could affect the
-                        experience of the user and drive him away from the platform. The challenge here is to design a
-                        form
-                        which could
-                        takes hours to fill(not at the same time).
+                        Social Entrepreneurs had to input in a lot of information through a form and forms can be long,
+                        confusing, and time-consuming. This could affect the experience of the user and drive him away
+                        from the platform.<b> The challenge here is to design a form that would be easy to understand
+                            and
+                            fill.</b>
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -121,12 +120,9 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <h3 style="color: #5E6C84;">Research</h3>
-                    <h4>Persona</h4>
-                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and thier problems and based on
-                        that determine set of
-                        features to solve thier
-                        problems</p>
+                    <h4>User Research</h4>
+                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and their problems and based on
+                        that determine a set of features to solve their problems</p>
                     <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
